# stellarium

./: CMakeLists.txt
debian/: changelog  control  copyright  rules  watch
plugins/EquationOfTime/src/: EquationOfTime.hpp
plugins/Oculars/src/: Oculars.cpp
plugins/PrintSky/src/gui/: PrintSkyDialog.cpp
plugins/Satellites/src/: Satellites.cpp
plugins/TelescopeControl/: CMakeLists.txt
plugins/TelescopeControl/resources/: device_models.json
plugins/TelescopeControl/src/: CMakeLists.txt  TelescopeClient.cpp  TelescopeControl.cpp  TelescopeControlGlobals.hpp
plugins/TelescopeControl/src/NexStar5/: CMakeLists.txt  NexStar5Command.cpp  NexStar5Command.hpp  NexStar5Connection.cpp  NexStar5Connection.hpp  TelescopeClientDirectNexStar5.cpp  TelescopeClientDirectNexStar5.hpp
plugins/TelescopeControl/src/Rts2/: TelescopeClientJsonRts2.cpp
po/stellarium/: POTFILES.in
src/: CMakeLists.txt  StelMainView.cpp  StelMainView.hpp
src/core/: StelApp.cpp  StelCore.cpp  StelUtils.cpp
src/core/modules/: AsterismMgr.cpp  ConstellationMgr.cpp  NebulaMgr.cpp  NomenclatureMgr.cpp  Planet.cpp  Planet.hpp  SolarSystem.cpp  StarMgr.cpp  StarMgr.hpp
src/gui/: StelDialog.hpp
